--- a/Assignment 13.html/Assignment 13 style.html
+++ b/Assignment 13.html/Assignment 13 style.html
@@ -13,7 +13,7 @@
 
 <div class="info">
     <div class="image">
-        <img src="me.jpg" alt=""width="150">
+        <img src="Me.jpg" alt=""width="150">
     </div>
     <div class="infotext">
         <h1>Hello</h1>
@@ -38,6 +38,7 @@ Assignment 01, Assignment 02, <br> Assignment 03,  Assignment 04,<br>Assignment 
     <h2>Languages</h2>
     <br>
     <b>HTML</b>
+    <br>
     <br>
     <b>CSS</b>
 </div>
