--- a/Assignment 18/Assignment 18.html
+++ b/Assignment 18/Assignment 18.html
@@ -6,6 +6,8 @@
     <title>Assignment 18</title>
     <link rel="stylesheet" href="Assignment 18 style.css">
     <link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital@1&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="img1">
@@ -39,7 +41,7 @@
     <h1>Characters</h1>
     <img src="images/Oswald_Nick_Jr_Character.png" alt="">
     <h3>Oswald the Octopus</h3>
-    <p> Oswald is an American/British children's animated television series that originally aired on Nickelodeon as part of the Nick Jr. block. It ran for a single season of 26 <br> episodes. It first aired on August 20, 2001 in the United States.The show was created by Dan Yaccarino and was co-produced by HIT Entertainment and Nickelodeon. <br> It was also broadcast on Noggin and CBS (during the Nick Jr. on CBS block) in reruns. Oswald is known to say "Oh, my gosh!" on many occasions. He wears a life <br>preserver when he is around water and loves Swizzleberry Swirl ice cream.A story of a blue octopus and his dog that looks like a hotdog, named Weenie, and their <br> friends like Daisy the daisy, and Henry the penguin. They go on adventures in their town that usually involves a problem that needs to be solved.Oswald is a large, <br> blue octopus who takes residence in an apartment complex located in Big City. He lives there along with many other animals, such as Henry the penguin and a turtle <br> named Buster. Oswald will often play the piano while singing to his pet dog Weenie.</p>
+    <p> Oswald is an American/British children's animated television series that originally aired on Nickelodeon as part of the Nick Jr. block. It ran for a single season of 26 episodes. It first aired on August 20, 2001 in the United States.The show was created by Dan Yaccarino and was co-produced by HIT Entertainment and Nickelodeon. It was also broadcast on Noggin and CBS (during the Nick Jr. on CBS block) in reruns. Oswald is known to say "Oh, my gosh!" on many occasions. He wears a life preserver when he is around water and loves Swizzleberry Swirl ice cream.A story of a blue octopus and his dog that looks like a hotdog, named Weenie, and their friends like Daisy the daisy, and Henry the penguin. They go on adventures in their town that usually involves a problem that needs to be solved.Oswald is a large, blue octopus who takes residence in an apartment complex located in Big City. He lives there along with many other animals, such as Henry the penguin and a turtle named Buster. Oswald will often play the piano while singing to his pet dog Weenie.</p>
 
 
     <div><img src="images/winnie.png" alt="" width="250">
