--- a/Assignment 19/Assignment 19.html
+++ b/Assignment 19/Assignment 19.html
@@ -9,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1> Glimpse of INDIA</h1>
-    <div class="img1">
+    <div class="maindiv">
+        <h1> Glimpse of INDIA</h1>
+        <div class="img1">
         <h2>KERALA</h2>
         <img src="Kerala.jpg" alt="" srcset="">
         <h3>Fun Facts:</h3>
@@ -66,6 +67,7 @@
             <br>
             3. Ghaznavi was followed by the Ghoris, the slaves, the Khiljis, the Tughlaks, the Lodhis and the Mughals.
         </p>
+    </div>
     </div>
 </body>
 </html>
